Correct flaws in ScrollBar.

--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/LanguageSelectorWidget.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/LanguageSelectorWidget.css
@@ -8,7 +8,6 @@
 	position: absolute;
 	right: 20px;
 	top: 5px;
-	visibility: visible;
 }
 
 span.LanguageSelectorWrapper {
