--- a/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Layout.css
+++ b/Implementation/WebTier/WebContent/Desktops/MochaUI/Styles/Layout.css
@@ -170,7 +170,7 @@ body {
 }	
 
 .pad {
-	padding: 8px;
+	padding: 0px;
 }
 
 #mainPanel {
